--- a/style.css
+++ b/style.css
@@ -14,10 +14,15 @@ body {
 .navbar-brand, .nav-link {
   color: #343a40 !important;
   transition: color 0.3s ease;
+  font-size: 20px;
 }
 
-.navbar-brand:hover, .nav-link:hover {
+.nav-link:hover {
   color: #EAE4DD !important;
+}
+
+.nav-link {
+  font-size: 20px;
 }
 
 header {
@@ -31,11 +36,18 @@ h1, h2 {
   font-family: "Saira Condensed", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 50px;
+  font-size: 45px;
 }
 
 .mb-3 {
   color: #bd5d38;
+  font-size: 30px;
+}
+
+
+
+.mb-5 li{
+  color: #343a40;
 }
 
 p {
@@ -58,7 +70,6 @@ p {
 
 .bg-primary {
   background-color: #bd5d38 !important;
-  
 }
 
 .btn-primary:hover {
@@ -84,7 +95,7 @@ footer {
   flex-wrap: wrap;
 }
 
-.contact a {
+.contact p {
   color: #fff;
   text-decoration: none;
 }
@@ -99,7 +110,7 @@ footer {
 }
 
 .social-icon {
-  font-size: 24px;
+  font-size: 35px;
   color: #fff;
   transition: color 0.3s ease;
 }
