--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Saira Condensed", sans-serif;
   line-height: 1.6;
   color: #bd5d38;
   background-color: #EAE4DD;
@@ -12,13 +12,14 @@ body {
 }
 
 .navbar-brand, .nav-link {
-  color: #343a40 !important;
+  color: #EAE4DD !important;
   transition: color 0.3s ease;
-  font-size: 20px;
+  font-size: 25px !important;
+  font-family: "Saira Condensed", sans-serif;
 }
 
 .nav-link:hover {
-  color: #EAE4DD !important;
+  color: #343a40 !important;
 }
 
 .nav-link {
@@ -26,12 +27,20 @@ body {
 }
 
 header {
-  background-color: #bd5d38 !important;
-  color: #EAE4DD;
+  background-color: #EAE4DD !important;
+  color: #bd5d38;
   text-align: center;
 }
 
-h1, h2 {
+h1 {
+  margin-bottom: 0.5rem;
+  font-family: "Saira Condensed", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 55px;
+}
+
+h2 {
   margin-bottom: 0.5rem;
   font-family: "Saira Condensed", sans-serif;
   font-weight: 700;
@@ -39,12 +48,13 @@ h1, h2 {
   font-size: 45px;
 }
 
-.mb-3 {
-  color: #bd5d38;
-  font-size: 30px;
+h5 { 
+  font-size: 22px;
 }
 
-
+a {
+  font-size: 20px;
+}
 
 .mb-5 li{
   color: #343a40;
@@ -52,6 +62,7 @@ h1, h2 {
 
 p {
   color: #343a40;
+  font-size: 22px;
 }
 
 .card {
@@ -62,17 +73,18 @@ p {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.btn-primary {
+.btn-primary, .btn-secondary{
   background-color: #343a40;
   border-color: #495057;
   transition: background-color 0.3s ease, transform 0.3s ease;
+  font-size: 18px;
 }
 
 .bg-primary {
-  background-color: #bd5d38 !important;
+  background-color: #EAE4DD !important;
 }
 
-.btn-primary:hover {
+.btn-primary:hover, .btn-secondary:hover {
   background-color: #bd5d38;
   border-color: #bd5d38;
   transform: scale(1.05);
